--- a/Projeto Sp Medical Group/sp_medical_group/public/index.html
+++ b/Projeto Sp Medical Group/sp_medical_group/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Sp Medical Group</title>
     <meta
       name="description"
       content="Web site created using create-react-app"
